gdk/wayland/gdkdisplay-wayland.c
@@ -100,6 +100,7 @@ gdk_registry_handle_global(void *data, struct wl_registry *registry, uint32_t id
   if (strcmp(interface, "wl_compositor") == 0) {
     display_wayland->compositor =
 	wl_registry_bind(display_wayland->wl_registry, id, &wl_compositor_interface, 1);
+    display_wayland->init_ref_count--;
   } else if (strcmp(interface, "wl_shm") == 0) {
    display_wayland->shm =
 	wl_registry_bind(display_wayland->wl_registry, id, &wl_shm_interface, 1);
@@ -113,10 +114,18 @@ gdk_registry_handle_global(void *data, struct wl_registry *registry, uint32_t id
     output =
       wl_registry_bind(display_wayland->wl_registry, id, &wl_output_interface, 1);
     _gdk_wayland_screen_add_output(display_wayland->screen, output);
+    /* We need to roundtrip until we've received the modes and
+     * geometry events for the output, which gives us the physical
+     * properties and available modes on the output. */
+    display_wayland->init_ref_count++;
   } else if (strcmp(interface, "wl_seat") == 0) {
     seat = wl_registry_bind(display_wayland->wl_registry, id, &wl_seat_interface, 1);
     _gdk_wayland_device_manager_add_device (gdk_display->device_manager,
 					    seat);
+    /* We need to roundtrip until we've received the wl_seat
+     * capabilities event which informs us of available input devices
+     * on this seat. */
+    display_wayland->init_ref_count++;
   } else if (strcmp(interface, "wl_data_device_manager") == 0) {
       display_wayland->data_device_manager =
         wl_registry_bind(display_wayland->wl_registry, id,
@@ -164,7 +173,11 @@ _gdk_wayland_display_open (const gchar *display_name)
   display_wayland->wl_registry = wl_display_get_registry(display_wayland->wl_display);
   wl_registry_add_listener(display_wayland->wl_registry, &registry_listener, display_wayland);
 
-  wl_display_dispatch(display_wayland->wl_display);
+  /* We use init_ref_count to track whether some part of our
+   * initialization still needs a roundtrip to complete. */
+  display_wayland->init_ref_count = 1;
+  while (display_wayland->init_ref_count > 0)
+    wl_display_roundtrip(display_wayland->wl_display);
 
   display_wayland->event_source =
     _gdk_wayland_display_event_source_new (display);
